package org.example;

public interface CRCStrategy {

    long crcFor(String data);

}
