package org.example;

public class Display {

    public String showBanner(String img){
        return "el display muestra: " + img;
    }

}
