package org.example;

public class Ringer {

    public void ring(){
        System.out.println("RING!!!!");
    }

}
